# kokoro-ja-demo

./: .gitignore  ANDROID_GUIDE.md  MOBILE_PORTING.md  OpenJTalk分析报告.md  README.md  check_phonemes.py  check_unidic.py  compare_g2p.py  convert_fp16.py  convert_hmm_to_text.py  copy_unidic.py  decode_test.py  example_simple.py  export_chinese_voices.py  export_onnx.py  export_vocab_for_android.py  export_voices_for_android.py  extract_ja_dict.py  extract_ja_pron_dict.py  extract_jieba_hmm.py  extract_pypinyin_phrases.py  final_comparison.py  find_unidic.py  fix_dict.py  g2p_comparison_results.json  g2p_logcat_fresh.txt  generate_chinese_dict.py  generate_english_dict.py  generate_ja_dict.py  generate_japanese_presets.py  generate_pinyin_dict.py  generate_proper_nouns.py  ja.py  logcat_output.txt  merge_dict.py  misaki_binding.py  misaki中文G2P分析报告.md  parse_matrix.py  pyproject.toml  quantize_int8.py  (+28 more)
app/: build.gradle.kts
app/src/androidTest/java/com/lsl/kokoro_ja_android/: ExampleInstrumentedTest.kt  G2PComparisonTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: english_dict.json  pinyin_dict.json
app/src/main/java/com/lsl/kokoro_ja_android/: ChineseG2PSystem.kt  ChinesePinyinToIPA.kt  EnglishG2PSystem.kt  EnglishToChinesePinyin.kt  JapaneseG2PSystem.kt  JapanesePresets.kt  KokoroEngine.kt  KokoroVocabFull.kt  LanguageDetector.kt  (+5 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/: ANDROID_BUILD_GUIDE.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  G2P_EVALUATION.md  G2P测试指南.md  HMM_VITERBI_BUG_ANALYSIS.md  公众号文章.md  动态帧选择机制详解.md
docs/progress/: 中文支持实施计划.md  阶段0完成总结.md  阶段1完成总结.md  阶段2进展报告.md  阶段3进展报告.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
misaki_c_port/: ARCHITECTURE.md  CMakeLists.simple.txt  CMakeLists.txt  DATA_EXTRACTION_SUMMARY.md  HEADER_REVIEW.md  LICENSE  README.md  TEST_REPORT.md  build_quenya_dll.sh  build_windows_dll.sh  debug_viterbi.c  demo_quenya.c  demo_tokenizer.sh  generate_ja_dict.py  quick_test_windows_build.sh  run_all_tests.sh  test_interactive.sh  test_num_convert  test_num_convert.c  test_punct.c  test_unicode.c  中文测试.txt
misaki_c_port/build_quenya_test/: test_quenya_tts.py
misaki_c_port/build_quenya_test/extracted_data/ja/: ja_pron_dict.tsv.backup2
misaki_c_port/build_quenya_test/extracted_data/vi/: symbols.txt  teencode.txt
misaki_c_port/build_quenya_test/extracted_data/zh/: hmm_model.json  hmm_prob_emit.txt
misaki_c_port/build_windows/: CMakeCache.txt  Makefile  README.md  REVIEWER_README.md  audio_reviewer.py  batch_tts_test.py  cmake_install.cmake  output.txt  run_misaki.ps1  test_c_g2p_kokoro.py  test_dll_api.py  test_real_tts.py  test_simple.py
misaki_c_port/build_windows/batch_output/: 001_phonemes.txt  002_phonemes.txt  003_phonemes.txt  004_phonemes.txt  005_phonemes.txt  006_phonemes.txt  007_phonemes.txt  008_phonemes.txt  009_phonemes.txt  010_phonemes.txt  011_phonemes.txt  012_phonemes.txt  013_phonemes.txt  014_phonemes.txt  015_phonemes.txt  016_phonemes.txt  017_phonemes.txt  018_phonemes.txt  019_phonemes.txt  020_phonemes.txt  021_phonemes.txt  022_phonemes.txt  023_phonemes.txt  024_phonemes.txt  025_phonemes.txt  026_phonemes.txt  027_phonemes.txt  028_phonemes.txt  029_phonemes.txt  030_phonemes.txt  031_phonemes.txt  032_phonemes.txt  033_phonemes.txt  034_phonemes.txt  035_phonemes.txt  036_phonemes.txt  037_phonemes.txt  038_phonemes.txt  039_phonemes.txt  040_phonemes.txt  (+121 more)
misaki_c_port/build_windows/extracted_data/: EXTRACTION_REPORT.md
misaki_c_port/build_windows/extracted_data/en/: stats.json
misaki_c_port/build_windows/extracted_data/ja/: ja_pron_dict.tsv  ja_pron_dict.tsv.backup  stats.json  words.txt
misaki_c_port/build_windows/extracted_data/vi/: acronyms.txt
misaki_c_port/build_windows/extracted_data/zh/: hmm_prob_start.txt  hmm_prob_trans.txt  pinyin_dict.txt  stats.json
misaki_c_port/build_windows/templates/: reviewer.html
misaki_c_port/docs/: CHINESE_DICT_EXPANSION.md  G2P_STATUS.md  HMM_IMPLEMENTATION_SUCCESS.md  JIEBA_ALGORITHM.md  LANG_DETECT_REFACTOR.md  MULTI_TONE_SUCCESS.md  POLYPHONE_IMPLEMENTATION.md  QUENYA_SUPPORT.md  TOKENIZER_STATUS.md  TONE_SANDHI_PLAN.md  TONE_SANDHI_SUCCESS.md  WINDOWS_BUILD_SUCCESS.md  WINDOWS_INTEGRATION.md  evaluation_request.md  implementation_report.md  optimization_results.md  transition_cost_design.md  如何为系统添加新语言.md  微信公众号文章_如何为TTS系统添加新语言.md  测试命令.txt
misaki_c_port/extracted_data/ja/: ja_pron_dict.tsv  ja_pron_dict.tsv.backup3
misaki_c_port/extracted_data/zh/: dict.txt  phrase_pinyin.txt  proper_nouns.txt  stats.json
misaki_c_port/include/: misaki.h  misaki_api.h  misaki_cache.h  misaki_context.h  misaki_dict.h  misaki_g2p.h  misaki_g2p_qya.h  misaki_hmm.h  misaki_kana_map.h  misaki_lang_detect.h  misaki_num2cn.h  misaki_string.h  misaki_tokenizer.h  misaki_tokenizer_qya.h  misaki_transition_rules.h  misaki_trie.h  misaki_types.h  misaki_viterbi.h
misaki_c_port/src/: main.c
misaki_c_port/src/api/: misaki_api.c
misaki_c_port/src/core/: misaki_dict.c  misaki_g2p.c  misaki_g2p_en.c  misaki_g2p_ja.c  misaki_g2p_qya.c  misaki_g2p_zh.c  misaki_hmm.c  misaki_kana_map.c  misaki_lang_detect.c  misaki_num2cn.c  misaki_num2cn_ext.c  misaki_string.c  misaki_tokenizer.c  misaki_tokenizer_en.c  misaki_tokenizer_ja.c  misaki_tokenizer_qya.c  misaki_tokenizer_zh.c  misaki_transition_rules.c  misaki_trie.c  misaki_viterbi.c
misaki_c_port/src/util/: tsv_parser.c
misaki_c_port/tests/: test_dict.c  test_g2p.c  test_g2p_en.c  test_g2p_ja.c  test_g2p_qya.c  test_g2p_zh.c  test_hmm.c  test_ja_comprehensive.c  test_ja_g2p_full.c  test_ja_pron_dict.c  test_kana_debug.c  test_lang_detect.c  test_lookup_debug.c  test_string.c  test_tokenizer.c  test_tokenizer_en.c  test_tokenizer_ja.c  test_tokenizer_qya.c  test_tokenizer_zh.c  test_trie.c  test_trie_match.c  test_tsv.c  test_verb_forms.c  test_viterbi.c  test_zh_full_dict.c  test_zh_tokenizer_real.c
misaki_c_port/tools/: extract_data.py
models/: vocab.json
(+6 files in other folders)
