[project]
name = "kokoro-ja-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kokoro>=0.9.4",
    "soundfile",
    "misaki[ja]",
    "unidic-lite>=1.0.8",
    "unidic>=1.1.0",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxconverter-common>=1.16.0",
    "pronouncing>=0.2.0",
]
